--- a/Dev-Blog/BlazorServer/wwwroot/css/Reset.css
+++ b/Dev-Blog/BlazorServer/wwwroot/css/Reset.css
@@ -15,12 +15,12 @@ table, caption, tbody, tfoot, thead, tr, th, td,
 article, aside, canvas, details, embed,
 figure, figcaption, footer, header, hgroup,
 menu, nav, output, ruby, section, summary,
-time, mark, audio, video, input, NavLink {
+time, mark, audio, video, input {
     margin: 0;
     padding: 0;
     border: 0;
     font-size: 100%;
-    font: inherit;
+    /*font: inherit;*/
     vertical-align: baseline;
     background: inherit;
     text-decoration: none;
