--- a/Dev-Blog/BlazorServer/Pages/_Host.cshtml
+++ b/Dev-Blog/BlazorServer/Pages/_Host.cshtml
@@ -8,19 +8,19 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    @*<link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />*@
+    @*<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">*@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>BlazorServer</title>
     <base href="~/" />
-    @*<link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />*@
-    <link href="BlazorServer.styles.css" rel="stylesheet" />
-    <link href="_content/Blazored.Modal/blazored-modal.css" rel="stylesheet" />
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
     <link href="~/css/Reset.css" rel="stylesheet" />
-    <link href="~/css/Modals.css" rel="stylesheet" />
     <link href="~/css/All.css" rel="stylesheet" />
+    <link href="BlazorServer.styles.css" rel="stylesheet" />
+    <link href="_content/Blazored.Modal/blazored-modal.css" rel="stylesheet" />
+    <link href="~/css/Modals.css" rel="stylesheet" />
 </head>
 <body>
     <component type="typeof(App)" render-mode="ServerPrerendered" />
