Fix null referencce error on startup.

--- a/Dev-Blog/BlazorServer/Pages/Index.razor
+++ b/Dev-Blog/BlazorServer/Pages/Index.razor
@@ -2,12 +2,18 @@
 
 @inject BlazorServer.Data.AppDbContext db
 <!-- LATEST POST -->
+
+@if (latestPost == null)
+{
+<p>Loading...</p> }
+else
+{
 <section post>
     <span>@latestPost.UpdateNum</span>
     <span>@latestPost.Date.ToShortDateString()</span>
     <img src=@latestPost.ImgURL />
     <p>@latestPost.Description</p>
-</section>
+</section>}
 
 <!-- YOUTUBE LINK -->
 <section youtube>
@@ -26,12 +32,10 @@
     </a>
 </section>
 
-@code {
-    PostModel latestPost;
+@code { PostModel latestPost;
 
     protected override async Task OnInitializedAsync()
     {
         latestPost = db.Post.OrderByDescending(x => x.Date)
                             .FirstOrDefault();
-    }
-}
+    } }
